objects/CCA2_Answer__c.object
<CustomObject>
    <fields>
        <fullName>Answer_Details__c</fullName>
        <label>Answer Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>High_Value__c</fullName>
        <label>High Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Low_Value__c</fullName>
        <label>Low Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PicklistResponse__c</fullName>
        <description>This will be saved as comma separated value that will be inserted.Need to split needs extract various values.</description>
        <inlineHelpText>PicklistResponse</inlineHelpText>
        <label>PicklistResponse</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>Question</description>
        <inlineHelpText>Question</inlineHelpText>
        <label>Question</label>
        <referenceTo>CCA2_Question__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>CCA2_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Answer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ANS-{00000}</displayFormat>
        <label>Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>